# tue_calibration

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
config/: rviz-fuerte.vcg  rviz-groovy.rviz
include/tue_calibration/: calibration.h  chain.h  laser_detector.h  marker_publisher.h  optimization_data.h  optimizer.h
launch/: laser_detector.launch  start.launch
src/: calibration.cpp  calibration_node.cpp  chain.cpp  chessboard_detector_node.cpp  detect_calibration_pattern.cpp  laser_detector.cpp  laser_detector_node.cpp  marker_publisher.cpp  optimizer.cpp
test/: amigo24127mod.urdf  amigo24127opt.urdf  test.launch  test_results  testnode.py
urdf/: amigo.urdf  amigo.urdf.backup02
