<?xml version="1.0"?>
<package>
  <name>tue_calibration</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="t.m.c.peters@student.tue.nl">Ton Peters</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  

</package>
